--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </div>
     <div
-      id="myUL"
+      id="myRow"
       class="pokemon-list row d-flex justify-content-center flex-wrap"
     ></div>
     <div id="modal-container"></div>
